# HaskellBasicForJavaDevelopers

set1/: Main.hs
set1/haskell/basic/: .project  SimpleAlgorithmsHaskell.cabal
set1/haskell/basic/src/: EulerProblems.hs  EulerProblemsSet2.hs
set1/wordfreq/: WordClassify.hs  WordFreq.hs
set2/: Euler21.hs  Euler25.hs  Makefile  Problem1.hs  Problem2.hs  Problem3.hs
set3/opengl/gl_camera/: DisplayLoop.hs  Makefile  MechCamera.hs  MechGenericObjects.hs  package.sh
set3/opengl/gl_camera/csrc/: Makefile  MechCamera.c
set4/withmonads/: Makefile  Reader.hs
set5/gameoflife/gamelife/text/: GLLifeMain.java  GameGLRender.hs  GameLife.hs  GameText.hs  JGameGLLife.java  JGameLife.java  JRenderCanvas.java  Makefile
set6/simplenetwork/: LICENSE.BOTLIST  Makefile  SimpleClient.cabal
set6/simplenetwork/src/: ByteStringMain.hs  Main.hs
set6/simplenetwork/src/Network/Simple/: SimpleClient.hs
set6/simplenetwork/src/Network/WithByteString/: ByteStringClient.hs
set6/simplenetwork/src/java/: SimpleServer.java  SimpleServerThread.java  clean.sh  j.sh
set6/simplenetwork/src/misc/amqp/: TestProducer.java  TestSimpleConsumer.java  test.py
